--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "scripts": {
     "g": "ember g",
     "build": "ember build",
-    "start": "ember server",
-    "dev:api": "node api/server.js",
+    "start": "npm run dev:api",
+    "dev:api": "node bin/server.js",
     "vendor:install": "bower i",
     "bower:clean": "rimraf bower_components && bower cache clean && bower i",
     "test": "ember test"
@@ -26,8 +26,8 @@
     "bower": "^1.8.0",
     "broccoli-asset-rev": "^2.4.5",
     "dotenv": "^4.0.0",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "2.11.1",
+    "ember-ajax": "2.5.5",
+    "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-auto-register": "1.1.0",
     "ember-cli-babel": "^5.1.7",
