--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "repository": "dadleyy/charcoal",
   "scripts": {
-    "g": "ember g",
     "build": "ember build",
     "build:watch": "ember build -w",
-    "start": "npm run dev:api",
-    "dev:api": "node bin/server",
     "vendor:install": "bower i",
+    "start": "node bin/server",
     "bower:clean": "rimraf bower_components && bower cache clean && bower i",
-    "test": "ember test"
+    "test": "ember test",
+    "addon:install": "ember install",
+    "g": "ember g"
   },
   "devDependencies": {
     "bower": "^1.8.0",
@@ -35,10 +35,10 @@
     "ember-cli-auto-register": "1.1.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "3.0.2",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^2.0.1",
     "ember-cli-moment-shim": "3.0.1",
     "ember-cli-pretender": "1.0.1",
     "ember-cli-qunit": "^3.0.1",
@@ -76,5 +76,8 @@
     "paths": [
       "lib/body-customizer"
     ]
+  },
+  "dependencies": {
+    "babel-eslint": "^7.1.1"
   }
 }
