[CHUI-9] updating application header to use package.json homepage

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "name": "Danny Hadley",
     "email": "<dadleyy@gmail.com>"
   },
-  "homepage": "https://github.com/dadleyy/charcoal",
+  "homepage": "https://github.com/dadleyy/charcoal.ui",
   "directories": {
     "doc": "doc",
     "test": "tests"
