--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-auto-register": "1.1.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-document-title": "0.3.3",
     "ember-cli-eslint": "3.0.2",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
