--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "charcoal",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "description": "emberjs playground",
   "license": "MIT",
   "author": {
@@ -80,6 +80,7 @@
     ]
   },
   "dependencies": {
-    "babel-eslint": "^7.1.1"
+    "babel-eslint": "^7.1.1",
+    "body-parser": "^1.17.1"
   }
 }
