--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "g": "ember g"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.23.0",
     "bower": "^1.8.0",
     "broccoli-asset-rev": "^2.4.5",
     "commander": "^2.9.0",
@@ -33,7 +34,7 @@
     "ember-cli": "2.12.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-auto-register": "1.1.0",
-    "ember-cli-babel": "^5.1.7",
+    "ember-cli-babel": "^5.2.4",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-document-title": "0.3.3",
     "ember-cli-eslint": "3.0.3",
