[CHUI-56] more re-write work
mo changes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "charcoal-ui",
   "version": "0.0.1",
   "description": "the browser-side application for charcoal",
-  "main": "index.js",
   "scripts": {
     "build": "gulp",
     "build:debug": "gulp",
@@ -55,6 +54,7 @@
     "del": "2.2.2",
     "dotenv": "2.0.0",
     "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "express": "5.0.0-alpha.4",
     "express-http-proxy": "0.10.1",
     "express-session": "1.15.2",
@@ -72,6 +72,7 @@
     "gulp-typescript": "3.1.6",
     "gulp-uglify": "2.1.1",
     "gulp-util": "3.0.7",
+    "gulp-yaml": "^1.0.1",
     "gulp-yuidoc": "0.1.2",
     "hoctable": "0.0.7",
     "jasmine-ajax": "^3.3.1",
@@ -84,12 +85,13 @@
     "karma-coffee-preprocessor": "1.0.1",
     "karma-eslint": "^2.2.0",
     "karma-jasmine": "^1.1.0",
-    "karma-jasmine-ajax": "0.1.13",
+    "karma-jasmine-ajax": "^0.1.13",
     "karma-narrow-reporter": "^2.0.1",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-requirejs": "1.1.0",
     "karma-typescript-preprocessor": "0.3.0",
     "merge-stream": "1.0.1",
+    "nanybar": "^1.0.2",
     "page": "^1.7.1",
     "qwest": "^4.4.5",
     "react": "^15.5.4",
