--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,33 @@
 {
   "extends": "eslint:recommended",
   "env": {
-    "es6": true
+    "es6": true,
+    "browser": true
+  },
+  "plugins": [
+    "eslint-plugin-react"
+  ],
+  "ecmaFeatures": {
+    "jsx": true,
   },
   "parser": "babel-eslint",
   "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-          "jsx": true
-      }
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+        "jsx": true
+    }
   },
   "rules": {
     "array-bracket-spacing": ["error", "always"],
     "array-callback-return": 2,
 
+    "react/jsx-uses-vars": 1,
+
     "block-scoped-var": 2,
     "brace-style": ["error"],
 
     "capitalized-comments": [ "error", "always"],
-    "class-methods-use-this": 2,
     "comma-dangle": ["error", "never"],
     "complexity": ["error", 20],
     "constructor-super": 2,
@@ -35,7 +43,7 @@
     "jsx-quotes": ["error", "prefer-double"],
     
     "key-spacing" : ["error", { "beforeColon": true }],
-    keyword-spacing: ["error", {
+    "keyword-spacing": ["error", {
       "before": true,
       "after": true,
       "overrides": {
