--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jasmine-core": "2.5.2",
     "json5": "0.5.1",
     "karma": "1.5.0",
+    "karma-anybar-reporter": "0.0.1",
     "karma-babel-preprocessor": "6.0.1",
     "karma-chrome-launcher": "2.0.0",
     "karma-cli": "1.0.1",
@@ -91,7 +92,6 @@
     "karma-requirejs": "1.1.0",
     "karma-typescript-preprocessor": "0.3.0",
     "merge-stream": "1.0.1",
-    "nanybar": "^1.0.2",
     "page": "^1.7.1",
     "qwest": "^4.4.5",
     "react": "^15.5.4",
