--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "express": "5.0.0-alpha.4",
     "express-http-proxy": "0.10.1",
     "express-session": "1.15.2",
+    "font-awesome": "^4.7.0",
     "formidable": "1.1.1",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
