--- a/.eslintrc
+++ b/.eslintrc
@@ -68,6 +68,7 @@
     "no-caller": 2,
     "no-cond-assign": 2,
     "no-constant-condition": 2,
+    "no-console": ["error", { allow: ["warn", "error", "trace"] }],
     "no-control-regex": 2,
 
     "no-dupe-keys": 2,
