--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,9 @@
     }
   },
   "rules": {
-    "array-bracket-spacing": ["error", "always", { "objectsInArrays": false }],
+    "array-bracket-spacing": ["error", "always", {
+      "objectsInArrays": false
+    }],
     "array-callback-return": 2,
 
     "react/jsx-uses-vars": 1,
